--- a/src/pages/page-control/page-control.html
+++ b/src/pages/page-control/page-control.html
@@ -4,7 +4,6 @@
     <ion-title>page-control</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
   <button ion-button full class="submit-button" (click)="sendData()">
     <ion-icon name="send"></ion-icon>&nbsp;Move Forward
@@ -12,4 +11,11 @@
   <button ion-button full class="submit-button" (click)="Reset()">
     <ion-icon name="send"></ion-icon>&nbsp;Reset
   </button>
+  <button ion-button full class="submit-button" (click)="deviceDisconnected()">
+    <ion-icon name="send"></ion-icon>&nbsp;Disconnect
+  </button>
+  <div *ngIf="res">
+    <h1> {res} </h1>
+  </div>
+
 </ion-content>
