--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="dark">
     <ion-title>
-      sHome
+      X-eye
     </ion-title>
   </ion-navbar>
 </ion-header>
