serial inputs taken

--- a/src/pages/page-control/page-control.html
+++ b/src/pages/page-control/page-control.html
@@ -15,7 +15,9 @@
     <ion-icon name="send"></ion-icon>&nbsp;Disconnect
   </button>
   <div *ngIf="res">
-    <h1> {res} </h1>
+    <h1> {{res}} </h1>
   </div>
 
+
+  <h2 *ngIf="data">{{data}}</h2>
 </ion-content>
